# trusted_library_database2

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: check.yml
migrations/: env.py
migrations/versions/: 2023_11_30_1852-af29e266d0d5_первая_миграция.py  2023_12_17_2125-c789ee4dcdfa_1_миграция.py  2024_01_12_0044-e3caaba6a0e3_comment.py  2024_02_05_1228-19454f99175f_1_миграция.py  2024_02_05_1458-c41e4c0365fc_поправил_модели.py  2024_02_09_1516-8a7280543e0f_1_migration.py  2024_02_09_1604-064a3ff2c3d7_2_migration.py
tld2/: auth.py  config.py  db.py  hashing.py  main.py  models.py  schemas.py
tld2/crud/: approved_library.py  approver.py  author.py  company.py  library.py  role.py  user.py
tld2/handlers/: approver.py  company.py  handler.py  handlers.py  library.py  login_handler.py  user.py
tld2/modules/approver/: crud.py  handler.py
tld2/modules/auth/: auth.py  login_handler.py
tld2/modules/author/: crud.py
tld2/modules/company/: crud.py  handler.py
tld2/modules/user/: crud.py  handler.py
