[tool.poetry]
name = "tld2"
version = "0.1.0"
description = ""
authors = ["Andrey Rukin <rukin897@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240106"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
jinja2 = "^3.1.3"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.1"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
isort = "^5.13.2"


[tool.mypy]
exclude = [
'prometheus_data\.py',
'.venv/',
'venv/',
'migrations.*',
]




[tool.poetry.group.test.dependencies]
deal = "^4.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
